--- a/osz/index.html
+++ b/osz/index.html
@@ -47,21 +47,22 @@
             background-color: #292929;
             border-radius: 5px;
             transition: background-color 0.3s ease;
+            cursor: pointer;
         }
 
         li:hover {
             background-color: #333;
         }
 
+        li:hover a {
+            color: #ffffff;
+            text-shadow: 0 0 10px #ffffff;
+        }
+
         a {
             text-decoration: none;
             color: #f5f5f5;
             font-weight: 600;
-        }
-
-        a:hover {
-            color: #ffffff;
-            text-shadow: 0 0 10px #ffffff
         }
 
         footer {
@@ -86,11 +87,18 @@
             .then(data => {
                 const fileList = document.getElementById('file-list');
                 data.forEach(file => {
-                    if (file.type === "file") {
+                    if (file.type === "file" && !file.name.endsWith(".html")) {
                         const listItem = document.createElement('li');
                         const link = document.createElement('a');
-                        link.href = "https://actiol.dev/osz/" + file.download_url.split("/").pop();
+                        const fileUrl = "https://actiol.dev/osz/" + file.download_url.split("/").pop();
+                        
+                        link.href = fileUrl;
                         link.textContent = file.name;
+
+                        listItem.addEventListener('click', () => {
+                            window.location.href = fileUrl;
+                        });
+
                         listItem.appendChild(link);
                         fileList.appendChild(listItem);
                     }
